--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -11,18 +11,18 @@
 
 {% block content %}
     <div class="row">
-      <div class="col-sm-4 col-sm-offset-3 col-md-4 col-md-offset-3 
-                  col-xs-4 col-xs-offset-3 col-lg-4 col-lg-offset-3  col-xl-4 col-xl-offset-3 ">
+      <div class="col-sm-6 col-sm-offset-4 col-md-6 col-md-offset-4
+                  col-xs-6 col-xs-offset-4 col-lg-6 col-lg-offset-4  col-xl-6 col-xl-offset-4 ">
           <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2  col-lg-8 col-lg-offset-2  col-xl-8 col-xl-offset-2">
-          
+
             <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login " alt="logo amadeus">
-            
+
           </div>
       </div>
     </div>
 
   	<div class="row">
-      <div class="col-md-6 col-sm-6 col-sm-offset-2 col-xs-6 col-xs-offset-2 col-lg-6 col-lg-offset-2 col-xl-6 col-xl-offset-2">
+      <div class="col-md-6 col-md-offset-4 col-sm-6 col-sm-offset-4 col-xs-6 col-xs-offset-4 col-lg-6 col-lg-offset-4 col-xl-6 col-xl-offset-4">
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
@@ -37,35 +37,35 @@
                 <div class="card-block">
                     <form id="form-login" class="form-group" method="post" action="">
 						{% csrf_token %}
-						<div class="form-group is-empty">
-							<label for="inputEmail" class="col-md-4 col-xs-4 col-sm-4 col-lg-4 control-label"> {% trans 'Username' %}</label>
-                        <div class="col-md-8 col-xs-8 col-lg-8 col-sm-8">
-                            <input form="form-login" type="text" name="username" class="form-control" id="inputEmail" placeholder="Username" value="{% if username %}{{username}}{% endif %}">
-                        </div>
-        							</div>
-                      <div class="form-group is-empty">
-                          <label for="inputPassword" class="col-md-4 col-xs-4 col-lg-4 col-sm-4 control-label"> {% trans 'Password' %}</label>
-                          <div class="col-md-8 col-xs-8 col-lg-8 col-sm-8">
-                              <input form="form-login" type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
-                          </div>
-                      </div>
-                      <div class="col-md-10 col-sm-10 col-xs-10 col-lg-10">
-                        <div class="checkbox">
-                          <label>
-                              <input form="form-login" type="checkbox" name="checkbox"><span class="checkbox-material"><span class="check"></span></span> {% trans 'Remember Email' %}
-                          </label>
-                        </div>
-                      </div>
-        						</form>
-                    <div class="col-md-10 col-sm-10 col-xs-10 col-lg-10">
-                        <a href="{% url 'core:password_reset' %}">{% trans "Forgot your password?" %}</a>
-                    </div>
-                    <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                        <a class="btn btn-flat" href="{% url 'core:guest' %}" formaction="#" style="position: initial;">{% trans 'Guest' %}</a>
-                    </div>
-                    <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                        <button type="submite" class="btn btn-flat btn-success" form="form-login" style="position: initial;">{% trans 'Login' %}</button>
-                    </div>
+                                    <div class="col-md-8 col-xs-8 col-lg-10 col-lg-offset-1 col-sm-10">
+                                      <div class="form-group">
+                                        <label for="inputEmail" class="control-label"> {% trans 'Username' %}</label>
+                                        <input form="form-login" for="inputSmall" type="text" name="username" class="form-control" placeholder="Username" id="inputEmail" value="{% if username %}{{username}}{% endif %}">
+                                      </div>
+                                    </div>
+                                    <div class="col-md-8 col-xs-8 col-lg-10 col-lg-offset-1 col-sm-10">
+                                      <div class="form-group">
+                                        <label for="inputPassword" class="control-label"> {% trans 'Password' %}</label>
+                                        <input form="form-login" for="inputSmall" type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
+                                      </div>
+                                    </div>
+                                    <div class="col-md-10 col-sm-10 col-xs-10 col-lg-10 col-lg-offset-1">
+                                      <div class="checkbox">
+                                        <label>
+                                            <input form="form-login" type="checkbox" name="checkbox"><span class="checkbox-material"><span class="check"></span></span> {% trans 'Remember Email' %}
+                                        </label>
+                                      </div>
+                                    </div>
+        				</form>
+                              <div class="col-md-6 col-xs-6 col-sm-6 col-lg-5 col-lg-offset-1 text-center">
+                                  <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;">{% trans 'Login' %}</button>
+                              </div>
+                              <div class="col-md-6 col-xs-6 col-sm-6 col-lg-5 text-center">
+                                  <a class="btn btn-default btn-raised btn-block" href="{% url 'core:guest' %}" formaction="#" style="position: initial;">{% trans 'Guest' %}</a>
+                              </div>
+                              <div class="col-md-10 col-sm-10 col-xs-10 col-lg-6 col-lg-offset-7 forgotPassword">
+                                  <a href="{% url 'core:password_reset' %}">{% trans "Forgot your password?" %}</a>
+                              </div>
                 </div>
               </div>
           <a class="btn btn-raised btn-primary btn-block" href="{% url 'core:register' %}">{% trans 'Sign Up' %} </a>
