modifying register user #205

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -353,3 +353,10 @@ ul, li {
 .form-group{
   margin-top: 10px;
 }
+
+/* core/register_user.html classes*/
+
+.block-register-inline{
+  float: left;
+  display: inline-block;
+}
