--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -11,12 +11,9 @@
 
 {% block content %}
     <div class="row">
-      <div class="col-sm-6 col-sm-offset-4 col-md-6 col-md-offset-4
-                  col-xs-6 col-xs-offset-4 col-lg-6 col-lg-offset-4  col-xl-6 col-xl-offset-4 ">
+      <div class="col-sm-6 col-sm-offset-4 col-md-6 col-md-offset-4 col-xs-6 col-xs-offset-4 col-lg-6 col-lg-offset-4  col-xl-6 col-xl-offset-4 ">
           <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2  col-lg-8 col-lg-offset-2  col-xl-8 col-xl-offset-2">
-
             <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login " alt="logo amadeus">
-
           </div>
       </div>
     </div>
