--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -360,3 +360,8 @@ ul, li {
   float: left;
   display: inline-block;
 }
+
+/* core/reset_password.html classes*/
+.send-reset-email{
+  float: right;
+}
