Adding button All courses on menu home [Issue #191]

--- a/app/templates/home_student.html
+++ b/app/templates/home_student.html
@@ -24,6 +24,7 @@
         	<ul class="nav nav-pills nav-stacked">
               	<li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
               	<li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
+                <li><a href="{% url 'core:guest' %}">{% trans 'All Courses' %}</a></li>
               	<li><a href="javascript:void(0)">{% trans 'Google accounts' %}</a></li>
             </ul>
         </div>
