Adapting html to only show view button if subscribed [Issue: #195]

--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -196,7 +196,7 @@
 <div>
     {% if request.GET.category == 'all' or none or request.GET.category == '' %}
       {% for subject in subjects %}
-        <div class="panel panel-info">
+        <div class="panel panel-info panel_{{ subject.id }}">
           <div class="panel-heading headingTwo ui-sortable-handle" role="tab">
             <div class="row">
                 <div class="col-xs-9 col-md-10 titleTopic">
@@ -220,7 +220,7 @@
 
                 {% if user|show_subject_subscribe:subject %}
                   <div class="col-xs-3 col-md-2">
-                    <a onclick="subscribe($(this), '{% url 'course:subscribe_subject' subject.slug %}' , '{% trans 'Are you sure you want to subscribe to this subject?' %}')" class="btn btn-sm btn-primary btn-raised">{% trans 'Subscribe' %}</a>
+                    <a onclick="subscribe($(this), '{% url 'course:subscribe_subject' subject.slug %}', {{ subject.id }}, '{% trans 'Are you sure you want to subscribe to this subject?' %}')" class="btn btn-sm btn-primary btn-raised">{% trans 'Subscribe' %}</a>
                   </div>
                 {% endif %}
             </div>
@@ -242,14 +242,14 @@
                     <p><b>{% trans "End" %}: </b>{{subject.end_date}}</p>
                   </div>
                 </div>
-                <a href="{% url 'course:view_subject' subject.slug %}" class="btn btn-raised btn-default center-block">{% trans 'View Subject' %}<div class="ripple-container"></div></a>
+                <a href="{% url 'course:view_subject' subject.slug %}" class="btn btn-raised btn-default center-block view_btn" {% if user|show_subject_subscribe:subject %}style="display:none"{% endif %}>{% trans 'View Subject' %}<div class="ripple-container"></div></a>
             </div>
         </div>
       {% endfor %}
   {% else %}
         {% for subject in subjects_category %}
             {% if subject.category.name == request.GET.category %}
-              <div class="panel panel-info">
+              <div class="panel panel-info panel_{{ subject.id }}">
           <div class="panel-heading headingTwo ui-sortable-handle" role="tab">
             <div class="row">
                 <div class="col-xs-9 col-md-10 titleTopic">
@@ -272,7 +272,7 @@
                 {% endif %}
                 {% if user|show_subject_subscribe:subject %}
                   <div class="col-xs-3 col-md-2">
-                    <a onclick="subscribe($(this), '{% url 'course:subscribe_subject' subject.slug %}' , '{% trans 'Are you sure you want to subscribe to this subject?' %}')" class="btn btn-sm btn-primary btn-raised">{% trans 'Subscribe' %}</a>
+                    <a onclick="subscribe($(this), '{% url 'course:subscribe_subject' subject.slug %}', {{ subject.id }}, '{% trans 'Are you sure you want to subscribe to this subject?' %}')" class="btn btn-sm btn-primary btn-raised">{% trans 'Subscribe' %}</a>
                   </div>
                 {% endif %}
             </div>
@@ -294,7 +294,7 @@
                     <p><b>{% trans "End" %}: </b>{{subject.end_date}}</p>
                   </div>
                 </div>
-                <a href="{% url 'course:view_subject' subject.slug %}" class="btn btn-raised btn-default center-block">{% trans 'View Subject' %}<div class="ripple-container"></div></a>
+                <a href="{% url 'course:view_subject' subject.slug %}" class="btn btn-raised btn-default center-block view_btn" {% if user|show_subject_subscribe:subject %}style="display:none"{% endif %}>{% trans 'View Subject' %}<div class="ripple-container"></div></a>
             </div>
         </div>
             {% endif %}
