--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -301,7 +301,7 @@
         {% endfor %}
   {% endif %}
 
-{% if  user|has_role:'professor' and user in course.professors or user|has_role:'system_admin' %}
+{% if  user|has_role:'professor' and user in course.professors.all or user|has_role:'system_admin' %}
 
     <div class="form-group">
     <a href="{% url 'course:create_subject' course.slug %}" data-toggle="modal" data-target="" class="btn btn-primary btn-lg btn-block btn-raised">{% trans 'Create Subject' %}<div class="ripple-container"></div></a>
