modified template to support notifications from users with images, added new notifications for testing purposes, such as creating forum and topic #207

--- a/core/templates/notifications.html
+++ b/core/templates/notifications.html
@@ -6,7 +6,7 @@
 	  <a href="{% url 'core:notification_read' notification.id %}"><div class="list-group-item">
 	  <div class="row-picture">
 	    <img class="circle" src="http://lorempixel.com/56/56/people/1" alt="icon">
-	    <div class="least-content pull-right">{{ notification.datetime }}</div>
+	    <div class="least-content ">{{ notification.datetime }}</div>
 	  </div>
 	  <div class="row-content">
 	    <p class="list-group-item-text">{{ notification.message }}</p>
