--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -178,7 +178,7 @@
           </div>
           <div class="modal-footer">
 
-            <a href="http://localhost:8080/html/screens/users/profile_user.html" target="_self"><button type="button" class="btn btn-primary">Confirm</button></a>
+            <a href="" target="_self"><button type="button" class="btn btn-primary">Confirm</button></a>
 
           </div>
         </div>
