--- a/app/templates/home_teacher_student_content.html
+++ b/app/templates/home_teacher_student_content.html
@@ -15,8 +15,8 @@
         </div>
         <div class="col-xs-10 col-md-11">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-            <a href=""><h4 class="resource_inline"><b>{{ notification.user }}</b></h4></a>
-            <p class="resource_inline">{{notification.message}} em : <a href="{% url 'core:notification_read' notification.id  %}">Recurso</a></p>
+            <h4 class="resource_inline"><b>{{ notification.actor }}</b></h4>
+            <p class="resource_inline">{{notification.message}} em : <a href="{% url 'core:notification_read' notification.id  %}">{{ notification.action_resource.resource.name }}</a></p>
             <p class="timePost"><i> {{ notification.datetime|timesince }} {% trans "ago" %}  </i></p>
         </div>
     </div>
