--- a/links/templates/links/create_link.html
+++ b/links/templates/links/create_link.html
@@ -12,6 +12,16 @@
         <!-- Card -->
         <form method="post" action="" id="form-link" enctype="multipart/form-data">
           {% csrf_token %}
+          {% if messages %}
+              {% for message in messages %}
+                  <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                      <p>{{ message }}</p>
+                  </div>
+              {% endfor %}
+          {% endif %}
         {% for field in form %}
             {% if field.field.required %}
               <label for="{{ field.auto_id }}">{{ field.label }}<span>*</span></label>
