fixed minor issues found and added a new sub-template for optimizing organization

--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -75,48 +75,7 @@
 		{% if courses|length > 0 %}
 			{% if request.GET.category == 'all' or none or request.GET.category == '' %}
 				{% for course in list_courses %}
-		          <div class="panel-group ui-accordion ui-widget ui-helper-reset ui-sortable" id="accordion" role="tablist" aria-multiselectable="false">
-		            <div class="group">
-						<div class="panel panel-info">
-						    <div class="panel-heading" role="tab">
-						      <div class="row">
-						        <div class="col-xs-9 col-md-10 titleTopic">
-						          <a role="button" data-toggle="collapse" data-parent="#accordion" href=".collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">
-						          <h4 style="color:white">{{course.name}}</h4>
-						          </a>
-						        </div>
-						        {% if user|has_role:'professor' or user|has_role:'system_admin' %}
-							        <div class="col-xs-4 col-md-2" id="divMoreActions">
-							            <div class="btn-group">
-							              <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-							              </button>
-							              <ul class="dropdown-menu" aria-labelledby="moreActions">
-							                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal4"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; Replicate</a></li>
-							                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#removeCourse"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; Remove</a></li>
-							              </ul>
-							            </div>
-							        </div>
-						        {% endif %}
-						      </div>
-						    </div>
-						    <div class="panel-collapse collapseOne collapse in" role="tabpanel" aria-labelledby="headingOne" aria-expanded="true" aria-hidden="false" tabindex="0">
-						      <div class="panel-body">
-						        <p><b>Course Name: </b>{{course.name}}</p>
-						        <p><b>Duration (in semesters): </b>09</p>
-						        <p><b>Coordinator: </b>{{course.professors}}</p>
-						        <p>
-						          <b>Description:</b>
-						          <i>
-						            {{course.description}}
-						          </i>
-						        </p>
-								<a href="{% url 'course:view' course.slug %}" class="btn btn-raised btn-default center-block">{% trans 'View Course' %}<div class="ripple-container"></div></a>
-						      </div>
-						    </div>
-						</div>
-					</div>
-				</div>
+		          	{% include "course/course_card.html" %}
 				{% endfor %}
 			{% else %}
 				{% for course in courses_category %}
