--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -43,7 +43,7 @@
         <ul class="nav nav-pills nav-stacked">
             <li><a href="teacher/course_participants_teacher.html" target="_self"> {% trans "Participants" %}</a></li>
             <li><a href="javascript:void(0)">{% trans "Replicate Subject" %}</a></li>
-            <li><a href="javascript:void(0)">{% trans "Create Subject" %}t</a></li>
+            <li><a href="javascript:void(0)">{% trans "Create Subject" %}</a></li>
             <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal">{% trans "Create Topic" %}</a></li>
         </ul>
     </div>
