Fixing show edit button after create post [Issue: #215]

--- a/forum/templates/post/post_render.html
+++ b/forum/templates/post/post_render.html
@@ -15,7 +15,7 @@
                             <i class="material-icons">more_horiz</i>
                         </a>
                         <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
-                            <li><a href="javascript:edit_post('{% url 'course:forum:update_post' post.id %}', '{{ post.id }}', '{% trans 'Post edited successfully!' %}')"></li>
+                            <li><a href="javascript:edit_post('{% url 'course:forum:update_post' post.id %}', '{{ post.id }}', '{% trans 'Post edited successfully!' %}')"><i class="material-icons">create</i> {% trans 'Edit' %}</a></li>
                             <li><a href="javascript:delete_post('{% url 'course:forum:delete_post' post.id %}', '{{ post.id }}')"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
                         </ul>
                     </div>
