--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -41,6 +41,21 @@
             </ul>
         </div>
     </div>
+
+    	{% if user|has_role:'professor' or user|has_role:'system_admin' %}
+
+		<div class="panel panel-primary navigation">
+		    <div class="panel-heading">
+		        <h3 class="panel-title">Category</h3>
+		    </div>
+		    <div class="panel-body">
+		        <ul class="nav nav-pills nav-stacked">
+		            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+		            <li><a href="{% url 'course:manage_cat' %}">List Category</a></li>
+		        </ul>
+		    </div>
+		</div>
+	{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -92,7 +107,7 @@
 							                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
 							              </button>
 							              <ul class="dropdown-menu" aria-labelledby="moreActions">
-							                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal4"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; Replicate</a></li>
+							                <li><a href="" data-toggle="modal" data-target="#myModal4"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; Replicate</a></li>
 							                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#removeCourse"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; Remove</a></li>
 							              </ul>
 							            </div>
