--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -46,7 +46,7 @@
 				            {% elif field.auto_id == 'id_is_staff' or field.auto_id == 'id_is_active' %}
 				            	<div class="checkbox">
 				            		<label>
-				            			{% render_field field type='checkbox' %}  	
+				            			{% render_field field type='checkbox' %}
 				            		</label>
 						        </div>
 						    {% elif field.auto_id == 'id_cpf' %}
@@ -72,16 +72,16 @@
 							{% endif %}
 						</div>
 					{% endfor %}
-					<div class="col-md-offset-2 col-md-2 col-sm-2 col-xs-2">
-						<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />	
+					<div class="col-md-3 col-sm-2 col-xs-2">
+						<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-block btn-success" />
 					</div>
-					<div class="col-md-offset-3 col-md-2 col-sm-2 col-xs-2">
-						<a href="{% url 'users:manage' %}" class="btn btn-sm btn-success" >{% trans 'Cancel' %}</a>	
+					<div class="col-md-3 col-sm-2 col-xs-2">
+						<a href="{% url 'users:profile' %}" class="btn btn-raised btn-block btn-danger" >{% trans 'Cancel' %}</a>
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
-	
+
 	<br clear="all" />
 {% endblock %}
