--- a/users/templates/users/update.html
+++ b/users/templates/users/update.html
@@ -24,7 +24,7 @@
 			</div>
 		{% endfor %}
 	{% endif %}
-	
+
 	<div class="card">
 		<div class="card-content">
 			<div class="card-body">
@@ -51,7 +51,7 @@
 
                 			{% elif field.auto_id == 'id_phone' %}
                 				{% render_field field class='form-control' onkeypress='campoNumerico(this,event); formatarTelefone(this,event);' %}
-                				
+
                 			{% elif field.auto_id == 'id_is_staff' or field.auto_id == 'id_is_active' %}
                 				<div class="checkbox">
                   					<label for="{{ field.auto_id }}">
@@ -77,10 +77,10 @@
 						</div>
 					{% endfor %}
 					<div class="col-md-offset-2 col-md-2 col-sm-2 col-xs-2">
-						<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />	
+						<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-success" />
 					</div>
 					<div class="col-md-offset-3 col-md-2 col-sm-2 col-xs-2">
-						<a href="{% url 'users:manage' %}" class="btn btn-sm btn-success" >{% trans 'Cancel' %}</a>	
+						<a href="{% url 'users:manage' %}" class="btn btn-raised btn-danger" >{% trans 'Cancel' %}</a>
 					</div>
 				</form>
 			</div>
