added image support #207

--- a/app/templates/home_teacher_student_content.html
+++ b/app/templates/home_teacher_student_content.html
@@ -7,7 +7,7 @@
   
     <div class="row">
         <div class="col-xs-2 col-md-1">
-            <img class="imgTimeLine" src="{{ notification.user.image_url }}">
+            <img class="imgTimeLine" src="{{ notification.actor.image_url }}">
         </div>
         <div class="col-xs-10 col-md-11">
             <h4 class="resource_inline"><b>{{ notification.actor.username }}</b></h4>
