--- a/courses/templates/course/course_card.html
+++ b/courses/templates/course/course_card.html
@@ -18,7 +18,7 @@
 			                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
 			              </button>
 			              <ul class="dropdown-menu" aria-labelledby="moreActions">
-			                <li><a href="javascript:replicate_course('{% url 'course:create'%}','{{course.slug}}')"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+			                <li><a href="{% url 'course:replicate_course' course.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
 			                <li><a href="javascript:delete_course('{% url 'course:delete' course.slug %}', '{{ course.slug }}', '{% trans "Are you sure you want to delete this course?" %}', '{% url 'course:manage' %}')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>{% trans 'Remove' %}</a></li>
 			              </ul>
 			            </div>
@@ -47,7 +47,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel">{% trans 'Forum' %}</h4>
+                <h4 class="modal-title" id="myModalLabel">{% trans 'Repicate Course' %}</h4>
             </div>
             <div class="modal-body">
                 <section>
