Fixing new post location [Issue: #215]

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -369,3 +369,29 @@ ul, li {
 .send-reset-email{
   float: right;
 }
+
+/* forum post loaded */
+@-webkit-keyframes loaded {
+    0% {
+        background-color: Yellow;
+        opacity: 0.2;
+    }
+    22% {
+        background-color: Yellow;
+        opacity: 0.3;
+    }
+    77% {
+        background-color: Yellow;
+        opacity: 0.6;
+    }
+    100% {
+        background-color: White;
+    }
+}
+
+.loaded {
+    -webkit-animation-name: loaded;
+    -webkit-animation-duration: 900ms;
+    -webkit-animation-iteration-count: 3;
+    -webkit-animation-timing-function: ease-in-out;
+}
