--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -29,6 +29,7 @@
 	<script type="text/javascript" src="{% static 'js/vendor/ripples.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/bootstrap-datepicker.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/alertify.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/vendor/jscookie.js' %}"></script>
 
   	<!-- Font awesome -->
 	<link rel="stylesheet" type="text/css" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
