--- a/courses/templates/category/index.html
+++ b/courses/templates/category/index.html
@@ -64,37 +64,36 @@
 			</div>
 		{% endfor %}
 	{% endif %}
-	<div class="table-responsive">
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th>{% trans 'Name' %}</th>
-					<th>{% trans 'Slug' %}</th>
-					<th class="text-center">{% trans 'Actions' %}</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% if categories|length > 0 %}
-					{% for category in categories %}
-						<tr>
-							<td>{{ category }}</td>
-							<td>{{ category.slug }}</td>
-							<td class="text-center">
-  								<a href="{% url 'course:update_cat' category.slug %}" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-edit"></span></a>
- 								<a href="javascript:modal.get('{% url 'course:delete_cat' category.slug %}','#category','#modal_category');" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a>
-  							</td>
-						</tr>
-					{% endfor %}
-				{% else %}
-					<tr>
-						<td colspan="3">
-							{% trans 'No categories found' %}
-						</td>
-					</tr>
-				{% endif %}
-			</tbody>
-		</table>
-	</div>
+	{% if categories|length > 0 %}
+		{% for category in categories %}
+			<div class="panel-group ui-accordion ui-widget ui-helper-reset ui-sortable" id="accordion" role="tablist" aria-multiselectable="false">
+			    <div class="group">
+					<div class="panel panel-info">
+					    <div class="panel-heading" role="tab">
+					      <div class="row">
+					        <div class="col-xs-9 col-md-10 titleTopic">
+					          <h4 style="color:white">{{category}}</h4>
+					        </div>
+					        
+						        <div class="col-xs-4 col-md-2" id="divMoreActions">
+						            <div class="btn-group">
+						              <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+						              </button>
+						              <ul class="dropdown-menu" aria-labelledby="moreActions">
+						                <li><a href="{% url 'course:update_cat' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Update' %}</a></li>
+						                <li><a href="javascript:modal.get('{% url 'course:delete_cat' category.slug %}','#category','#modal_category');"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>{% trans 'Remover' %}</a></li>
+						              </ul>
+						            </div>
+						        </div>
+					        
+					      </div>
+					    </div>
+					</div>
+				</div>
+			</div>
+		{% endfor %}
+	{% endif %}
 	<div class="row" id="modal_category">
 <script src="{% static 'js/modal_category.js' %}"></script>
 {% endblock %}
