Fixing new answer position [Issue: #215]

--- a/forum/templates/post/post_render.html
+++ b/forum/templates/post/post_render.html
@@ -1,6 +1,6 @@
 {% load i18n permission_tags list_post_answer %}
 
-<div  class="row">
+<div class="row new_post">
     <div id="post_{{ post.id }}" class="col-sm-12 col-xs-12">
         <h3 class="user-name">
             {{ post.user }}
