--- a/forum/templates/post_answers/post_answer_render.html
+++ b/forum/templates/post_answers/post_answer_render.html
@@ -1,6 +1,6 @@
 {% load i18n permission_tags %}
 
-<div>
+<div class="new_answer">
     <div id="answer_{{ answer.id }}" class="row" style="background-color: #e0e0e0">
         <div class="col-sm-12 col-xs-12">
             <h3 class="user-name">
