--- a/courses/templates/category/index.html
+++ b/courses/templates/category/index.html
@@ -94,6 +94,27 @@
 			</div>
 		{% endfor %}
 	{% endif %}
+	<div class="col-md-12">
+		<nav aria-label="Page navigation">
+			<ul class="pagination">
+				{% if page_obj.has_previous %}
+				    <li>
+				        <a href="?page={{ page_obj.previous_page_number }}"><span><<</span></a>
+				    </li>
+				{% endif %}
+			    {% for page_number in paginator.page_range %}
+					<li{% if page_obj.number == page_number %} class="active"{% endif %}>
+	    				<a href="?page={{ page_number }}">{{ page_number }}</a>
+					</li>
+				{% endfor %}
+				{% if page_obj.has_next %}
+				    <li>
+				        <a href="?page={{ page_obj.next_page_number }}"><span>>></span></a>
+				    </li>
+				{% endif %}
+			</ul>
+		</nav>
+	</div>
 	<div class="row" id="modal_category">
 <script src="{% static 'js/modal_category.js' %}"></script>
 {% endblock %}
