Fixing date bug [Issue: #215]

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 {% load static i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 
 <html>
 <head>
@@ -20,7 +21,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/material.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/ripples.min.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/datepicker.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/bootstrap-datepicker.standalone.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/alertifyjs/alertify.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/alertifyjs/themes/bootstrap.css' %}">
 	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
@@ -28,6 +29,11 @@
 	<script type="text/javascript" src="{% static 'js/vendor/material.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/ripples.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/bootstrap-datepicker.js' %}"></script>
+
+	{% with "js/vendor/locales/bootstrap-datepicker."|add:LANGUAGE_CODE|add:".js" as locale_datepicker %}
+		<script type="text/javascript" src="{% static locale_datepicker %}"></script>
+	{% endwith %}
+	
 	<script type="text/javascript" src="{% static 'js/vendor/alertify.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/jscookie.js' %}"></script>
 
